# tpurm

./: .gitignore  AGENTS.md  README.md  pyproject.toml
tpurm/: cli.py  common.py  filestate.py  freeze.py  globals.py  initialize.py  launch.py  scheduler.py  staging.py  state.py  steal.py  tpu.py  util_gcloud.py  util_log.py  util_ssh.py  wheelhouse.py
tpurm/remote/: gcloud_auth.sh  init.sh  install.sh  kill.sh  launch_runner.sh  reserve.sh  warmup.sh  wheelhouse_build.sh  wheelhouse_exists.sh  wheelhouse_install.sh  wheelhouse_preamble.sh
