[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tpurm"
version = "0.1.0"
dependencies = ["python-dotenv"]

[project.scripts]
tpurm = "tpurm.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tpurm*"]

[tool.setuptools.package-data]
tpurm = ["remote/*.sh"]
